manifests/cups/base/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cups
  labels:
    app: cups
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cups
  template:
    metadata:
      labels:
        app: cups
    spec:
      hostNetwork: true
      containers:
        - name: cups
          image: ghcr.io/anujdatar/cups:latest
          securityContext:
            privileged: true
            runAsUser: 1000
          volumeMounts:
            - mountPath: /etc/cups
              name: cups-config
            - mountPath: /var/run/dbus
              name: dbus
            - mountPath: /var/run/avahi-daemon/socket
              name: avahi-socket
            - mountPath: /dev/bus/usb
              name: usb-devices
              mountPropagation: Bidirectional
          resources: {}
      volumes:
        - name: cups-config
          persistentVolumeClaim:
            claimName: pvc-nfs-cups
        - name: dbus
          hostPath:
            path: /var/run/dbus
            type: DirectoryOrCreate
        - name: avahi-socket
          hostPath:
            path: /var/run/avahi-daemon/socket
            type: Socket
        - name: usb-devices
          hostPath:
            path: /dev/bus/usb
            type: Directory
