manifests/cups/base/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: cups
  labels:
    app: cups
spec:
  selector:
    app: cups
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 631
      targetPort: http
