manifests/cups/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cups
  labels:
    gateway: private
    app: cups
spec:
  hostnames:
    - cups.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: http
  rules:
    - backendRefs:
        - name: cups
          port: 631
